--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "![1677486543532](https://github.com/dinesh061/social-media-website/assets/115059054/454ce610-4251-4318-a000-aba24e2c7526)\r https://www.linkedin.com/feed/update/urn:li:activity:7035888563493748736/?originTrackingId=nSeTaTh%2BR6CE3QNST95FHw%3D%3D",
   "main": "index.js",
   "scripts": {
+    "start":"node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
